# phantom-index

./: .gitignore  README.md  default.nix  phantom-index.cabal  shell.nix
src/Data/: Indexed.hs
